--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 opencv-python==4.10.0.82
 numpy==1.26.4
 mediapipe==0.10.14
-torch==2.4.1
-torchvision==0.19.1
-torchaudio==2.4.1
+torch==2.5.1+cu121
+torchvision==0.20.1+cu121
+torchaudio==2.5.1+cu121
 scikit-learn==1.5.0
